// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a select input with options 1`] = `
<DocumentFragment>
  <div
    class="sc-jSgupP hQfTbO"
  >
    <select
      class="sc-gsTCUz blhiui overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 pr-12"
      data-testid="Select"
    >
      <option
        data-testid="select-option"
        selected=""
        value="1"
      >
        Option 1
      </option>
      <option
        data-testid="select-option"
        value="2"
      >
        Option 2
      </option>
    </select>
    <div
      class="sc-dlfnbm sc-eCssSg hugYTt bXzrNx w-12 text-lg pointer-events-none text-theme-secondary-text"
    >
      <div
        class="sc-bdfBwQ fPrsah"
        height="1em"
        width="1em"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select should render a select input with placeholder 1`] = `
<DocumentFragment>
  <div
    class="sc-jSgupP hQfTbO"
  >
    <select
      class="sc-gsTCUz blhiui overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 pr-12"
      data-testid="Select"
    >
      <option
        disabled=""
        selected=""
        value=""
      >
        Select option
      </option>
    </select>
    <div
      class="sc-dlfnbm sc-eCssSg hugYTt bXzrNx w-12 text-lg pointer-events-none text-theme-secondary-text"
    >
      <div
        class="sc-bdfBwQ fPrsah"
        height="1em"
        width="1em"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
